fixed z-index of left fade in example

--- a/src/components/hsm/hsm.scss
+++ b/src/components/hsm/hsm.scss
@@ -11,6 +11,7 @@
         width: 50px;
         transition: opacity 100ms;
         pointer-events: none;
+        z-index: 1;
     }
 
     &:before {
@@ -72,7 +73,7 @@
     background: red;
     top: 50%;
     margin-top: -15px;
-    z-index: 1;
+    z-index: 2;
     border-radius: 100%;
     transition: opacity 200ms;
 
